Bug#40498 MGM C API calls "Exit" if connection to the managment server is lost  - Install SIGPIPE handler to catch broken pipe error that occurs when writing    to a closed or rest socket  - Add function 'ndb_mgm_set_ignore_sigpipe' making it possible to avoid    that mgmapi installs SIGPIPE handler